Fix scrollbar issue of the column based gallery
Fixes teh scrollbar issue of the column based gallery which is the last
one as the gallery container was not able to contain all the images
inside itself because of the large minimum sizes declared for the
images. This commit fixes it by decreasing the minimum width of the
images to 60px so as to accomodate no matter how small the viewport
width becomes

Also makes the gutter gap to 20px from the earlier 15px of the upper grid
image gallery

--- a/styles/main.css
+++ b/styles/main.css
@@ -647,7 +647,7 @@ body .wrapper .css-grid__boxes--rows {
   grid-template-rows: repeat(2, 100px);
   grid-template-columns: repeat(4, 150px, 1fr);
   grid-template-areas: "image1 image2 image2 ." "image1 . image3 image4" "image5 image6 image6 image7" "image8 image9 image9 ." "image10 . image11 image12" "image13 image14 image14 image14";
-  gap: 15px;
+  gap: 20px;
   grid-auto-flow: row dense;
   grid-auto-rows: 100px 150px 200px 250px 50px;
 }
@@ -728,15 +728,14 @@ body .wrapper .css-grid__boxes--columns {
   margin-top: 30px;
   margin-right: 20px;
   margin-left: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   display: grid;
   grid-template-rows: repeat(6, 100px);
-  grid-template-columns: repeat(2, minmax(120px, 1fr));
+  grid-template-columns: repeat(2, minmax(60px, 1fr));
   grid-template-areas: "image1 image7" "image2 image8" "image3 image9" "image4 image10" "image5 image11" "image6 image12";
-  gap: 15px;
+  gap: 20px;
   grid-auto-flow: column dense;
-  grid-auto-columns: 100px 150px 200px 250px 50px;
-  overflow: scroll;
+  grid-auto-columns: minmax(60px, 2fr) minmax(60px, 1fr) 200px 250px 50px;
 }
 
 body .wrapper .css-grid__boxes--columns__image {
